@@ -1,3 +1,8 @@
+2014-08-06  Corinna Vinschen  <corinna@vinschen.de>
+
+	* passwd.c (usage): Rename DAYS to MINDAYS and MAXDAYS.
+	* utils.xml (passwd): Ditto.
+
 2014-07-29  Corinna Vinschen  <corinna@vinschen.de>
 
 	* mkgroup.c (usage): Move info message that this /etc/group isn't really
